CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- The Fl_File_Chooser window now properly resizes its
	  controls (STR #766)
	- The Fl_Help_Dialog window now properly resizes its
	  controls (STR #768)
	- The Fl_File_Chooser favorites window is now resizable
	  (STR #770)
	- Now provide FL_PLASTIC_ROUND_UP/DOWN_BOX box types
	  which are used by the plastic scheme.
	- FLUID windows that are resized through the widget panel
	  now remain resizable by the window manager.
	- Increased the size of the background image used by
	  the plastic scheme to reduce the CPU load of redraws
	  (STR #769)
	- Fixed a syntax highlighting bug in the editor demo.
	- Fl_Progress now contrasts the label color with the bar
	  color, so labels will be readable at all times.
	- fl_read_image() didn't use the right red, green, and
	  blue masks on XFree86.
	- Fixed Quickdraw drawing of 3 and 4 sided polygons (STR
	  #765)
	- Fixed fl_message() code so that it does not get
	  accidentaly addded to the current group (STR #253)
	- FLUID now highlights code in the widget callback and
	  code editors.
	- FLUID now supports printing of windows.
	- Fixed inactive drawing of border, embossed, and
	  engraved box types.
	- Added Fl_Spinner widget (another combination of
	  existing widgets in a header file)
	- FLUID now provides support for UI templates.
	- fl_not_clipped() incorrectly used the current window
	  dimensions for gross clipping, which interfered with
	  off-screen rendering.
	- Fl_Window::draw() and Fl_Window::iconlabel() could leak
	  memory if copy_label() was used on the window.
	- fl_shortcut_label() now shows letter shortcuts in
	  uppercase, e.g. "Ctrl+N" instead of "Ctrl+n" to be
	  consistent with other toolkits.
	- FLUID now provides unlimited undo/redo support.
	- FLUID now provides an option to choose which scheme
	  (default, none, plastic) to display.
	- Fixed scheme background issue with windows in FLUID.